<resources>
    <string name="app_name">Yelp Clone</string>
    <string name="image">Image</string>
    <string name="name">NAME</string>
    <string name="_500">500</string>
    <string name="_300_wishful_lane">300 Wishful Lane</string>
    <string name="tampa">Tampa,</string>
    <string name="fl">FL,</string>
    <string name="phone_Num">9898347433</string>
    <string name="_500_reviews">500 Reviews</string>
    <string name="us">US</string>
    <string name="dinner">Dinner</string>
    <string name="_3000m">3000m</string>
    <string name="price">500</string>
    <string name="yelp_clone">Yelp Clone</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="more">More</string>
    <string name="gender">Male</string>
    <string name="employment">Engineer</string>
    <string name="go_to_users">Go To Users</string>
    <string name="back_to_main">Back to Main</string>
    <string name="stefan_yahoo_com">stefan@yahoo.com</string>
    <string name="skill">Skill</string>
    <string name="_33544">33544</string>
    <string name="title_activity_restaurant_map">RestaurantMapActivity</string>
    <string name="go_to_maps">Check Location</string>
    <string name="title_activity_user_map">UserMapActivity</string>
</resources>